RESOLVED FIXED239300
[ Monterey ] 3 http/tests/push-api/subscribe tests failing
https://bugs.webkit.org/show_bug.cgi?id=239300
Summary [ Monterey ] 3 http/tests/push-api/subscribe tests failing
Truitt Savell
Reported 2022-04-13 13:46:05 PDT
http/tests/push-api/subscribe-default-permissions-iframe-same-origin.html [ Failure ] http/tests/push-api/subscribe-default-permissions.html [ Failure ] http/tests/push-api/subscribe-deny-permissions-on-prompt.html [ Failure ] These three tests fail in tandem together whenever they do flake. History: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&test=http%2Ftests%2Fpush-api%2Fsubscribe-default-permissions-iframe-same-origin.html&test=http%2Ftests%2Fpush-api%2Fsubscribe-default-permissions.html&test=http%2Ftests%2Fpush-api%2Fsubscribe-deny-permissions-on-prompt.html results: https://build.webkit.org/results/Apple-Monterey-Debug-AppleSilicon-WK2-Tests/r292769%20(1690)/results.html I was able to reproduce these test failures by running them on one runner and preceded by http/tests/notifications/window-show-on-click.html. This test was not recently modified, so I don’t know what new interaction is occurring to break these push-api tests. run-webkit-tests http/tests/notifications/window-show-on-click.html http/tests/push-api/subscribe-default-permissions-iframe-same-origin.html http/tests/push-api/subscribe-default-permissions.html http/tests/push-api/subscribe-deny-permissions-on-prompt.html --debug --child-processes 1 --iterations 3
Attachments
Radar WebKit Bug Importer
Comment 1 2022-04-13 13:46:27 PDT
Truitt Savell
Comment 2 2022-04-13 13:50:02 PDT
Marked these as flakey while this is investigated https://trac.webkit.org/changeset/292827/webkit
Ben Nham
Comment 3 2022-05-26 13:45:37 PDT
EWS
Comment 4 2022-06-02 10:42:03 PDT
Committed r295131 (251222@main): <https://commits.webkit.org/251222@main> Reviewed commits have been landed. Closing PR #1065 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.