Reset WebKitTestRunner notification policies as part of test cleanup https://bugs.webkit.org/show_bug.cgi?id=239300

Reviewed by Geoffrey Garen.

Some notification layout tests that check permissions (e.g. http/tests/push-api/subscribe) seem to
be flaky. I can't reproduce this flakiness locally, but from code inspection, this flakiness is
possible if a prewarmed or cached WebContent process is used for one of these tests.

The reason for this is that when a test finishes, `WebNotificationProvider` (in WebKitTestRunner)
tries to reset the notification permissions. However, it doesn't tell cached WebContent processes
about this reset via `WKNotificationManagerProviderDidRemoveNotificationPolicies`. To fix this, make
`WebNotificationProvider::reset` call that function.

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/NetworkProcess/Notifications/NetworkNotificationManager.cpp:
(WebKit::NetworkNotificationManager::deletePushAndNotificationRegistration):
* Tools/WebKitTestRunner/WebNotificationProvider.cpp:
(WTR::securityOriginsFromStrings):
(WTR::WebNotificationProvider::reset):

Canonical link: https://commits.webkit.org/251222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295131 268f45cc-cd09-0410-ab3c-d52691b4dbfc